--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "devDependencies": {},
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "git@github.com:piecioshka/slides-lightning-talks.git"
     }
 }
